istio/gateway-mongodb.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mongodb
spec:
  selector:
    istio: mongo-ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: mongo
      number: 27017
      protocol: MONGO
  - hosts:
    - '*'
    port:
      name: mongo-tls
      number: 27018
      protocol: TLS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/mongo-proxy/certs/tls.crt
      privateKey: /etc/mongo-proxy/certs/tls.key
