istio/virtualservice-mongodb.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mongodb
spec:
  gateways:
  - mongodb
  hosts:
  - '*'
  tcp:
  - match:
    - port: 27017
    route:
    - destination:
        host: mongodb
        port:
          number: 27017
  - match:
    - port: 27018
    route:
    - destination:
        host: mongodb
        port:
          number: 27017
